# examples

./: Makefile  README.md  doxygen-awesome.css
.github/workflows/: c-cpp.yml
c/: .gitignore  11.c  99.c  Makefile  README.md  ansi.c  libc.c  tr.c  tricks.c
cpp/: .gitignore  03.cpp  11.cpp  14.cpp  17.cpp  20.cpp  98.cpp  CMakeLists.txt  Doxyfile  Makefile  README.md  features.cpp  patterns.cpp  patterns.dot  visitor.html
js/: 10.js  6.js  7.js  8.js  9.js  Makefile  README.md  test-node.js  test.html
llm/: claude_agent_sdk-demo.py  client-openai-completions.py  client-openai-completions.sh  client-openai-responses.py  client-openai-responses.sh  client-openai-vector_stores-completions.py  client-openai-vector_stores-responses.py  dspy-demo.py  langchain_demo.py  langgraph_demo.py  llama-stack-client-completions-min.py  llama-stack-client-list-models.py  llama-stack-client-vector_stores-agent.py  models.sh  simple_train.py  train-transformers.py  transformers-generate-from_pretrained.py  transformers-pipeline-demo.py  transformers-pipeline.py  transformers-train-llama2.py
python/: 2.0.py  2.1.py  2.2.py  2.3.py  2.4.py  2.5.py  2.6.py  2.7.py  3.0.py  3.1.py  3.10.py  3.11.py  3.12.py  3.13.py  3.2.py  3.3.py  3.4.py  3.5.py  3.6.py  3.7.py  3.8.py  3.9.py  Makefile  README.md  passed.py  python3.x-install.sh  pythonX-install.sh  tricks.py
rust/: Cargo.toml  Makefile
rust/src/: Makefile  main.rs
sprof/: .gitignore  Makefile  libdemo.c  prog.c  runme.sh
