cmake_minimum_required(VERSION 3.10)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic -Wno-unused")
set(CMAKE_CXX_STANDARD_REQUIRED True)
execute_process(COMMAND clang++ ${CXX_FLAGS} -std=gnu++2a ${CMAKE_SOURCE_DIR}/20.cpp -o 20)
project(17)
add_executable(17 17.cpp)
set_property(TARGET 17 PROPERTY CXX_STANDARD 17)
project(14)
add_executable(14 14.cpp)
set_property(TARGET 14 PROPERTY CXX_STANDARD 14)
project(11)
add_executable(11 11.cpp)
set_property(TARGET 11 PROPERTY CXX_STANDARD 11)
project(03)
add_executable(03 03.cpp)
set_property(TARGET 03 PROPERTY CXX_STANDARD 98)
